--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>RecoverFit</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script type="text/javascript" src="javascript/javascript.js" defer></script>   
 </head>
 <body>
     <header>
         <nav class="menu">
-
-            <img src="/img/LogoRecover.svg" alt="">
-
+            <img class="logo1" src="/img/LogoRecover.svg" alt="">
             <div class="menu-list">
                 <ul>
                     <li class="menu-item"><a href="#Servicos" class="menu-link">Serviços</a></li>
@@ -21,10 +20,66 @@
                     <li class="menu-item"><a href="#Para_socios" class="menu-link">Para sócios</a></li>
                 </ul>
             </div>
+
             <div class="registrar-button-1">
                 <button><a href="formulario.html">Registrar</a></button>
             </div>
+            <div class="logo2">
+                <a href="index.html"><img src="/img/LogoRecover.svg"  alt=""></a>
+            </div>
+
+            <div class="mobile-menu-icon">
+                <button onclick="menuShow()"><img class="icon" src="img/menu_black_36dp.svg" alt=""></button>
+            </div>
         </nav>
+
+        <div class="mobile-menu">
+            <ul>
+                <li class="menu-item"><a href="#Servicos" class="menu-link">Serviços</a></li>
+                <li class="menu-item"><a href="#Planos" class="menu-link">Planos</a></li>
+                <li class="menu-item"><a href="#Para_empresas" class="menu-link">Para empresas</a></li>
+                <li class="menu-item"><a href="#Para_colaboradores" class="menu-link">Para colaboradores</a></li>
+                <li class="menu-item"><a href="#Para_socios" class="menu-link">Para sócios</a></li>
+            </ul>
+    
+            <div class="registrar-button-2">
+                <button><a href="formulario.html">Registrar</a></button>
+            </div>
+        </div>
     </header>
+
+    <div id="carrossel">
+		  <img src="img/branco3.png" name="slide" id="slide"/>
+	  </div>
+
+    <section class="quem-somos-section">
+        <div class="quem-somos-card">
+          <h2 class="quem-somos-title">Quem somos?</h2>
+          <p class="quem-somos-text">
+            A Recovered Fit é uma cooperativa de saúde e bem-estar voltada à terceira
+            idade, que oferece um ambiente seguro, acolhedor e adaptado para
+            promover qualidade de vida, autonomia e saúde. Contamos com uma
+            equipe multidisciplinar de enfermeiros, fisioterapeutas e nutricionistas,
+            garantindo um acompanhamento completo e individualizado. Nosso
+            propósito é unir atividade física e cuidado humanizado, proporcionando aos
+            idosos uma rotina mais ativa e saudável.
+          </p>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <img src="/img/LogoRecover.svg" alt="Recovered Fit logo">
+        <ul class="social-icons">
+          <li><a href="https://www.instagram.com/recoverfitsp?igsh=OWdmcHdjbGNiOHU5" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+          <li><a href="" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
+        </ul>
+
+        <p class="footer-copy">
+          © Site criado por Kauê Mattos, Rafael Crespo, Breno Graciano. Todos os direitos reservados.
+        </p>
+      </footer>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
