--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="menu">
-            <img class="logo1" src="/img/LogoRecover.svg" alt="">
+            <img class="logo1" src="img/LogoRecover.svg" alt="">
             <div class="menu-list">
                 <ul>
                     <li class="menu-item"><a href="#Servicos" class="menu-link">Serviços</a></li>
@@ -25,7 +25,7 @@
                 <button><a href="Registrar.html">Registrar</a></button>
             </div>
             <div class="logo2">
-                <a href="index.html"><img src="/img/LogoRecover.svg"  alt=""></a>
+                <a href="index.html"><img src="img/LogoRecover.svg"  alt=""></a>
             </div>
 
             <div class="mobile-menu-icon">
@@ -57,7 +57,7 @@
         <div class="servicos-container">
             <div class="servico-card">
                 <div class="servico-img">
-                    <img src="/img/e-obrigatorio-ter-ambulatorio-na-empresa.jpg" alt="">
+                    <img src="img/e-obrigatorio-ter-ambulatorio-na-empresa.jpg" alt="">
                 </div>
                 <h3>Ambulatório</h3>
                 <p>A cooperativa oferece atendimento ambulatorial aos cooperados. O objetivo é promover saúde, prevenir dores e melhorar a qualidade de vida.</p>
@@ -139,7 +139,7 @@
     
 
       <footer class="footer">
-        <img src="/img/LogoRecover.svg" alt="Recovered Fit logo">
+        <img src="img/LogoRecover.svg" alt="Recovered Fit logo">
         <ul class="social-icons">
           <li><a href="https://www.instagram.com/recoverfitsp?igsh=OWdmcHdjbGNiOHU5" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
           <li><a href="" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
