--- a/ParaEmpresas.html
+++ b/ParaEmpresas.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para empresas</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/ParaEmpresas.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ParaEmpresas.css">
     <script type="text/javascript" src="javascript/javascript.js" defer></script>  
 </head>
 <body>
     <header>
         <nav class="menu">
-            <img class="logo1" src="/img/LogoRecover.svg" alt="">
+            <img class="logo1" src="img/LogoRecover.svg" alt="">
             <div class="menu-list">
                 <ul>
                     <li class="menu-item"><a href="#Servicos" class="menu-link">Serviços</a></li>
@@ -26,7 +26,7 @@
                 <button><a href="Registrar.html">Registrar</a></button>
             </div>
             <div class="logo2">
-                <a href="index.html"><img src="/img/LogoRecover.svg"  alt=""></a>
+                <a href="index.html"><img src="img/LogoRecover.svg"  alt=""></a>
             </div>
 
             <div class="mobile-menu-icon">
@@ -55,12 +55,12 @@
             <p>A RecoverFit é uma cooperativa de saúde e bem-estar voltada à terceira idade, com um ambiente seguro e acolhedor que une cuidado humanizado e atividade física.</p>
           </div>
           <div class="introducao-cover">
-            <img src="./img/LogoEmpresas.svg" alt="Bicicleta Bikcraft Preta">
+            <img src="img/LogoEmpresas.svg" alt="Bicicleta Bikcraft Preta">
           </div>
     </article>
     
     <footer class="footer">
-        <img src="/img/LogoRecover.svg" alt="Recovered Fit logo">
+        <img src="img/LogoRecover.svg" alt="Recovered Fit logo">
         <ul class="social-icons">
           <li><a href="https://www.instagram.com/recoverfitsp?igsh=OWdmcHdjbGNiOHU5" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
           <li><a href="" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
