Alteração links e Logo linlk
Alteração links e Logo linlk

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="menu">
-            <img class="logo1" src="img/LogoRecover.svg" alt="">
+            <a href="index.html"><img class="logo1" src="img/LogoRecover.svg" alt=""></a>
             <div class="menu-list">
                 <ul>
                     <li class="menu-item"><a href="#Servicos" class="menu-link">Serviços</a></li>
