--- a/index.html
+++ b/index.html
@@ -86,41 +86,41 @@
         </div>
       </section>
       <section id="Planos" class="planos-section">
-      
-        <div class="planos-container">
-            <div class="plano-card basic">
-                <h3>COVER BASIC</h3>
-                <p>• Acesso ao ambulatório</p>
-                <p>• Acompanhamento básico</p>
-                <p>• Suporte limitado</p>
-                <h4>R$ 89,90</h4>
-                <button>ASSINAR</button>
+      <h2>Planos</h2>
+            <div class="planos-container">
+                <div class="plano-card basic">
+                    <h3>COVER BASIC</h3>
+                    <p>• Acesso ao ambulatório</p>
+                    <p>• Acompanhamento básico</p>
+                    <p>• Suporte limitado</p>
+                    <h4>R$ 89,90</h4>
+                    <button>ASSINAR</button>
+                </div>
+                <div class="plano-card plus">
+                    <h3>COVER PLUS</h3>
+                    <p>• Ambulatório completo</p>
+                    <p>• Nutricionista mensal</p>
+                    <p>• Personal 1x semana</p>
+                    <h4>R$ 119,00</h4>
+                    <button>ASSINAR</button>
+                </div>
+                <div class="plano-card max">
+                    <h3>COVER MAX</h3>
+                    <p>• Nutricionista + Personal</p>
+                    <p>• Acesso total aos serviços</p>
+                    <p>• Suporte Premium</p>
+                    <h4>R$ 199,00</h4>
+                    <button>ASSINAR</button>
+                </div>
+                <div class="plano-card pro-max">
+                    <h3>COVER PRO MAX</h3>
+                    <p>• Todos os serviços incluídos</p>
+                    <p>• Fisioterapia ilimitada</p>
+                    <p>• Consultorias exclusivas</p>
+                    <h4>R$ 399,90</h4>
+                    <button>ASSINAR</button>
+                </div>
             </div>
-            <div class="plano-card plus">
-                <h3>COVER PLUS</h3>
-                <p>• Ambulatório completo</p>
-                <p>• Nutricionista mensal</p>
-                <p>• Personal 1x semana</p>
-                <h4>R$ 119,00</h4>
-                <button>ASSINAR</button>
-            </div>
-            <div class="plano-card max">
-                <h3>COVER MAX</h3>
-                <p>• Nutricionista + Personal</p>
-                <p>• Acesso total aos serviços</p>
-                <p>• Suporte Premium</p>
-                <h4>R$ 199,00</h4>
-                <button>ASSINAR</button>
-            </div>
-            <div class="plano-card pro-max">
-                <h3>COVER PRO MAX</h3>
-                <p>• Todos os serviços incluídos</p>
-                <p>• Fisioterapia ilimitada</p>
-                <p>• Consultorias exclusivas</p>
-                <h4>R$ 399,90</h4>
-                <button>ASSINAR</button>
-            </div>
-        </div>
         </section>
       <section class="quem-somos-section">
           <div class="quem-somos-card">
@@ -136,7 +136,6 @@
             </p>
           </div>
         </section>
-    
 
       <footer class="footer">
         <img src="img/LogoRecover.svg" alt="Recovered Fit logo">
