Index para index
Index para index

--- a/ParaSocios.html
+++ b/ParaSocios.html
@@ -14,8 +14,8 @@
             <a href="index.html"><img class="logo1" src="img/LogoRecover.svg" alt=""></a>
             <div class="menu-list">
                 <ul>
-                    <li class="menu-item"><a href="Index.html#Servicos" class="menu-link">Serviços</a></li>
-                    <li class="menu-item"><a href="Index.html#Planos" class="menu-link">Planos</a></li>
+                    <li class="menu-item"><a href="index.html#Servicos" class="menu-link">Serviços</a></li>
+                    <li class="menu-item"><a href="index.html#Planos" class="menu-link">Planos</a></li>
                     <li class="menu-item"><a href="ParaEmpresas.html" class="menu-link">Para empresas</a></li>
                     <li class="menu-item"><a href="ParaClientes.html" class="menu-link">Para colaboradores</a></li>
                     <li class="menu-item"><a href="ParaSocios.html" class="menu-link">Para sócios</a></li>
@@ -36,8 +36,8 @@
 
         <div class="mobile-menu">
             <ul>
-                <li class="menu-item"><a href="Index.html#Servicos" class="menu-link">Serviços</a></li>
-                <li class="menu-item"><a href="Index.html#Planos" class="menu-link">Planos</a></li>
+                <li class="menu-item"><a href="index.html#Servicos" class="menu-link">Serviços</a></li>
+                <li class="menu-item"><a href="index.html#Planos" class="menu-link">Planos</a></li>
                 <li class="menu-item"><a href="ParaEmpresas.html" class="menu-link">Para empresas</a></li>
                 <li class="menu-item"><a href="ParaClientes.html" class="menu-link">Para colaboradores</a></li>
                 <li class="menu-item"><a href="ParaSocios.html" class="menu-link">Para sócios</a></li>
