Adicionando botoes e mexendo nas imagens

--- a/ParaClientes.html
+++ b/ParaClientes.html
@@ -53,6 +53,7 @@
         <div class="introducao">
             <h1 id="label-introducao">Bem-estar todos os dias com a RecoverFit</h1>
             <p>Mais do que um espaço de treino, a RecoverFit é uma cooperativa de saúde e bem-estar voltada à terceira idade. Aqui, cada pessoa encontra o equilíbrio entre movimento, cuidado e acolhimento.</p>
+            <a class="planos" href="index.html#Planos">Veja os planos</a>
           </div>
           <div class="introducao-cover">
             <img src="img/LogoCliente.svg" alt="Bicicleta Bikcraft Preta">
