--- a/ParaEmpresas.html
+++ b/ParaEmpresas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ParaEmpresas.css">
     <script type="text/javascript" src="javascript/javascript.js" defer></script>  
+    <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
 </head>
 <body>
     <header>
