--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RecoverFit</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="javascript/javascript.js" defer></script>   
+    <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
 </head>
 <body>
     <header>
