--- a/Registrar.html
+++ b/Registrar.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
     <title>Formulário</title>
 </head>
 
