--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     
       <div id="carrossel">
-            <img src="img/whatsapp-image-2022-11-16-at-151038.jpg" name="slide" id="slide"/>
+            <img src="img/AcademiaNova3.png" name="slide" id="slide"/>
           </div>
       <section id="Servicos" class="servicos-section">
         <h2 class="servicos-title">Serviços</h2>
