--- a/ParaEmpresas.html
+++ b/ParaEmpresas.html
@@ -75,7 +75,7 @@
         <img src="img/LogoRecover.svg" alt="Recovered Fit logo">
         <ul class="social-icons">
           <li><a href="https://www.instagram.com/recoverfitsp?igsh=OWdmcHdjbGNiOHU5" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-          <li><a href="" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
+          <li><a href="https://www.tiktok.com/@recoverfitsp" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
         </ul>
 
         <p class="footer-copy">
